--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
+    "dev": "ts-node-dev ./src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,15 +18,13 @@
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^3.0.0",
-    "prisma": "^4.16.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@prisma/client": "^4.16.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.3.3",
     "prettier": "^3.0.0"
   }
 }
